Fixed squishy video

--- a/css/styles.css
+++ b/css/styles.css
@@ -329,6 +329,7 @@ footer{
 
                     /****** Video ******/
 
+
 /****************************************************************/
 /**************************** Footer ****************************/
 /****************************************************************/
@@ -371,6 +372,16 @@ footer{
     .column-2 {
         width: 59%;
         
+    }
+
+                    /****** Video ******/
+
+    #video {
+        text-align: center;
+    }
+
+    iframe{
+        width: 75%
     }
      
 }
